--- a/base/plugin/dt-yarn-shell/dt-yarn-shell-client/pom.xml
+++ b/base/plugin/dt-yarn-shell/dt-yarn-shell-client/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>dt-yarn-shell-core</artifactId>
-            <version>1.0.0</version>
+            <version>${revision}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>xml-apis</artifactId>
