--- a/base/plugin/rdbs/oracle/pom.xml
+++ b/base/plugin/rdbs/oracle/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.common</artifactId>
-            <version>1.0.0</version>
+            <version>${revision}</version>
             <scope>provided</scope>
         </dependency>
 
