--- a/base/plugin/rdbs/sqlserver/pom.xml
+++ b/base/plugin/rdbs/sqlserver/pom.xml
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.rdbs.common</artifactId>
-            <version>1.0.0</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.common</artifactId>
-            <version>1.0.0</version>
+            <version>${revision}</version>
             <scope>provided</scope>
         </dependency>
 
