--- a/entrance/pom.xml
+++ b/entrance/pom.xml
@@ -67,7 +67,7 @@
 	    <dependency>
 			<groupId>com.dtstack.rdos</groupId>
 			<artifactId>web</artifactId>
-			<version>1.0.0</version>
+			<version>${revision}</version>
 		</dependency>
 	</dependencies>
 
