--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -102,6 +102,7 @@
     "release": "./scripts/release.sh",
     "ssh": "./scripts/ssh_server.sh",
     "hotfix": "./scripts/hotfix.sh --b",
+    "push-dev": "./scripts/push-dev.sh",
     "scp": "./scripts/scp.sh",
     "lint": "eslint ./src/**/*.js --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md && npm run changeissueurl",
