--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
 		<module>base/plugin/hadoop</module>
 		<module>base/plugin/learning</module>
 		<module>base/plugin/flink150</module>
+		<module>base/plugin/flink130</module>
+		<module>base/plugin/flink140</module>
+		<module>base/plugin/spark160-yarn</module>
 		<module>base/plugin/dt-yarn-shell</module>
 	</modules>
 
