--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -92,7 +92,7 @@
     "webpack": "^4.18.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "3.1.1",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "3.1.14",
     "webpack-merge": "4.1.0",
     "worker-loader": "^2.0.0"
   },
