--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -14,6 +14,7 @@
     "dt-sql-parser": "^1.1.10",
     "echarts": "3.8.5",
     "handsontable": "^6.2.2",
+    "highlight.js": "9.14.2",
     "history": "4.6.1",
     "lodash": "4.17.11",
     "mirror-creator": "1.1.0",
@@ -32,6 +33,7 @@
     "redux": "3.6.0",
     "redux-logger": "3.0.1",
     "redux-thunk": "2.2.0",
+    "showdown": "1.9.0",
     "styled-components": "3.1.6",
     "whatwg-fetch": "2.0.3"
   },
@@ -92,7 +94,7 @@
     "webpack": "^4.18.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "3.1.1",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "3.1.14",
     "webpack-merge": "4.1.0",
     "worker-loader": "^2.0.0"
   },
