--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<module>base/plugin/odps</module>
 		<module>base/plugin/rdbs</module>
 		<module>base/plugin/hadoop</module>
-		<module>base/plugin/learning</module>
+		<!--<module>base/plugin/learning</module>-->
 		<module>base/plugin/flink150</module>
 		<module>base/plugin/flink170</module>
 		<module>base/plugin/flink130</module>
