build: add test and expect as global keyword

--- a/engine-ui/packages/console-ui/.eslintrc.json
+++ b/engine-ui/packages/console-ui/.eslintrc.json
@@ -20,6 +20,10 @@
         "node": true,
         "es6": true
     },
+    "globals": {
+        "expect": "readable",
+        "test": "readable"
+    },
     "parserOptions": {
         "ecmaVersion": 8,
         "sourceType": "module"
