feat(helpdoc): add deploy section of helpdoc

--- a/engine-ui/packages/console-ui/scripts/dt-rdos-offline.conf
+++ b/engine-ui/packages/console-ui/scripts/dt-rdos-offline.conf
@@ -19,6 +19,12 @@ server {
       try_files $uri /index.html;
   }
 
+  # 帮助文档映射路径
+  location ~ /public/helpSite/ {
+      root /home/admin/app/dtinsight-help-docs/output;
+      rewrite /public/helpSite/(.*)$ /$1 break;
+  }
+
   # 代理设置, 根据实际状况配置替换
   location ~ ^/api {
       proxy_set_header Host 172.16.10.135;
