--- a/base/plugin/rdbs/hive/pom.xml
+++ b/base/plugin/rdbs/hive/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>base.rdbs</artifactId>
         <groupId>com.dtstack.rdos</groupId>
-        <version>${revision}</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.rdbs.common</artifactId>
-            <version>${revision}</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.common</artifactId>
-            <version>${revision}</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -74,6 +74,26 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.2</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <!-- here the phase you need -->
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <move file="${basedir}/target/${project.name}-${project.version}.jar"
+                                      tofile="${basedir}/target/${project.name}-${git.branch}.jar" />
+                            </tasks>
                         </configuration>
                     </execution>
                 </executions>
