--- a/base/plugin/spark-yarn/pom.xml
+++ b/base/plugin/spark-yarn/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>engine</artifactId>
         <groupId>com.dtstack.rdos</groupId>
-        <version>${revision}</version>
+        <version>1.0.0</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.common</artifactId>
-            <version>${revision}</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
 
