--- a/base/plugin/spark/spark-client/pom.xml
+++ b/base/plugin/spark/spark-client/pom.xml
@@ -5,7 +5,7 @@
   <parent>
       <groupId>com.dtstack.rdos</groupId>
       <artifactId>base.spark</artifactId>
-	  <version>${revision}</version>
+	  <version>1.0.0</version>
       <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>spark-client</artifactId>
@@ -57,6 +57,26 @@
 									</excludes>
 								</filter>
 							</filters>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<!-- here the phase you need -->
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<move file="${basedir}/target/${project.name}-${project.version}.jar"
+									  tofile="${basedir}/target/${project.name}-${git.branch}.jar" />
+							</tasks>
 						</configuration>
 					</execution>
 				</executions>
