--- a/base/plugin/flink140/pom.xml
+++ b/base/plugin/flink140/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.dtstack.rdos</groupId>
         <artifactId>engine</artifactId>
-        <version>${revision}</version>
+        <version>1.0.0</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
     <artifactId>base.flink140</artifactId>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.dtstack.rdos</groupId>
             <artifactId>base.common</artifactId>
-            <version>${revision}</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -151,6 +151,27 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.2</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <!-- here the phase you need -->
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <move file="${basedir}/target/${project.name}-${project.version}.jar"
+                                      tofile="${basedir}/target/${project.name}-${git.branch}.jar" />
+                            </tasks>
                         </configuration>
                     </execution>
                 </executions>
