--- a/base/plugin/spark/pom.xml
+++ b/base/plugin/spark/pom.xml
@@ -5,7 +5,7 @@
   <parent>
       <groupId>com.dtstack.rdos</groupId>
       <artifactId>engine</artifactId>
-	  <version>${revision}</version>
+	  <version>1.0.0</version>
       <relativePath>../../../pom.xml</relativePath>
   </parent>
   <artifactId>base.spark</artifactId>
@@ -27,7 +27,7 @@
         <dependency>
 		   <groupId>com.dtstack.rdos</groupId>
 		   <artifactId>base.common</artifactId>
-		   <version>${revision}</version>
+		   <version>1.0.0</version>
 		   <scope>provided</scope>
 		</dependency>
   
