--- a/base/plugin/spark160-yarn/spark160-sql-proxy/pom.xml
+++ b/base/plugin/spark160-yarn/spark160-sql-proxy/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>base.spark160-yarn</artifactId>
         <groupId>com.dtstack.rdos</groupId>
-        <version>${revision}</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
