--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.dtstack.rdos</groupId>
 		<artifactId>engine</artifactId>
-		<version>${revision}</version>
+		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>common</artifactId>
