--- a/entrance/pom.xml
+++ b/entrance/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.dtstack.rdos</groupId>
 		<artifactId>engine</artifactId>
-		<version>${revision}</version>
+		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>entrance</artifactId>
@@ -29,18 +29,36 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<descriptors>
-						<descriptor>assembly.xml</descriptor>
-					</descriptors>
-				</configuration>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.3</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
 						<goals>
-							<goal>single</goal>
+							<goal>shade</goal>
 						</goals>
+						<configuration>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<!-- here the phase you need -->
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<move file="${basedir}/target/${project.name}-${project.version}.jar"
+									  tofile="${basedir}/target/${project.name}-${git.branch}-with-dependencies.jar" />
+							</tasks>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -67,7 +85,7 @@
 	    <dependency>
 			<groupId>com.dtstack.rdos</groupId>
 			<artifactId>web</artifactId>
-			<version>${revision}</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
