--- a/service/pom.xml
+++ b/service/pom.xml
@@ -5,7 +5,7 @@
   <parent>
 	  <groupId>com.dtstack.rdos</groupId>
 	  <artifactId>engine</artifactId>
-	  <version>${revision}</version>
+	  <version>1.0.0</version>
       <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>service</artifactId>
@@ -77,7 +77,7 @@
 		<dependency>
 			<groupId>com.dtstack.rdos</groupId>
 			<artifactId>base.common</artifactId>
-			<version>${revision}</version>
+			<version>1.0.0</version>
 		</dependency>
   </dependencies>
 </project>
