--- a/base/plugin/dt-yarn-shell/dt-yarn-shell-client/pom.xml
+++ b/base/plugin/dt-yarn-shell/dt-yarn-shell-client/pom.xml
@@ -143,11 +143,12 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <copy todir="${basedir}/../target">
-                                    <fileset dir="${basedir}/target">
-                                        <include name="${project.name}-${project.version}.jar" />
-                                    </fileset>
-                                </copy>
+                                <move file="${basedir}/target/${project.name}-${project.version}.jar"
+                                      tofile="${basedir}/target/${project.name}-${git.branch}.jar" />
+
+                                <delete>
+                                    <fileset dir="${basedir}/../dt-yarn-shell-core/target" includes="dt-yarn-shell-core-${project.version}.jar"/>
+                                </delete>
                             </tasks>
                         </configuration>
                     </execution>
