--- a/engine-ui/packages/console-ui/.babelrc
+++ b/engine-ui/packages/console-ui/.babelrc
@@ -8,6 +8,11 @@
         ],
         "@babel/preset-react"
     ],
+    "env": {
+        "test": {
+          "presets": ["@babel/preset-env", "@babel/preset-react"]
+        }
+    },
     "plugins": [
         ["import", { "libraryName": "antd", "style": true }],
         "@babel/transform-runtime",
