--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -34,6 +34,7 @@
     "redux-logger": "3.0.1",
     "redux-thunk": "2.2.0",
     "showdown": "1.9.0",
+    "regenerator-runtime": "^0.13.1",
     "styled-components": "3.1.6",
     "whatwg-fetch": "2.0.3"
   },
@@ -44,13 +45,14 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/preset-stage-2": "^7.0.0",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-angular": "7.1.2",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
@@ -75,6 +77,7 @@
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "husky": "1.2.0",
+    "jest": "*",
     "less": "3.8.1",
     "less-loader": "^4.1.0",
     "lodash-webpack-plugin": "0.11.4",
@@ -84,6 +87,7 @@
     "node-sass": "4.11.0",
     "postcss-loader": "0.9.1",
     "progress-bar-webpack-plugin": "1.11.0",
+    "react-test-renderer": "^16.8.3",
     "sass-loader": "^7.0.1",
     "strip-ansi": "3.0.1",
     "style-loader": "^0.21.0",
@@ -94,7 +98,7 @@
     "webpack": "^4.18.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "3.1.1",
-    "webpack-dev-server": "3.1.14",
+    "webpack-dev-server": "3.2.1",
     "webpack-merge": "4.1.0",
     "worker-loader": "^2.0.0"
   },
@@ -103,7 +107,7 @@
     "dev": "webpack-dev-server --progress --inline --config build/dev.js --open",
     "build": "npm install --unsafe-perm=true --allow-root --save-dev && rm -rf dist/* && webpack --profile --color --progress --config build/prod.js",
     "mock": "cup config",
-    "test": "test",
+    "test": "jest --no-cache",
     "release": "./scripts/release.sh",
     "ssh": "./scripts/ssh_server.sh",
     "hotfix": "./scripts/hotfix.sh --b",
@@ -115,7 +119,8 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -c ./commitlint.config.js -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -c ./commitlint.config.js -E HUSKY_GIT_PARAMS",
+      "pre-push": "npm test"
     }
   },
   "standard-version": {
