--- a/base/plugin/dt-yarn-shell/dt-yarn-shell-core/pom.xml
+++ b/base/plugin/dt-yarn-shell/dt-yarn-shell-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>base.dt-yarn-shell</artifactId>
         <groupId>com.dtstack.rdos</groupId>
-        <version>1.0.0</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
