--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.dtstack.rdos</groupId>
 	<artifactId>engine</artifactId>
-	<version>1.0.0</version>
+	<version>${revision}</version>
 	<packaging>pom</packaging>
 	<name>engine</name>
 	<properties>
@@ -103,30 +103,6 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>pl.project13.maven</groupId>
-				<artifactId>git-commit-id-plugin</artifactId>
-				<version>2.2.6</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>revision</goal>
-						</goals>
-					</execution>
-				</executions>
-
-				<configuration>
-					<dateFormat>yyyy.MM.dd HH:mm:ss</dateFormat>
-					<verbose>true</verbose>
-					<generateGitPropertiesFile>true</generateGitPropertiesFile>
-					<gitDescribe>
-						<always>false</always>
-						<dirty>-dirty</dirty>
-						<forceLongFormat>false</forceLongFormat>
-					</gitDescribe>
 				</configuration>
 			</plugin>
 		</plugins>
