--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,7 +5,7 @@
   <parent>
 	  <groupId>com.dtstack.rdos</groupId>
 	  <artifactId>engine</artifactId>
-	  <version>1.0.0</version>
+	  <version>${revision}</version>
   </parent>
   <artifactId>web</artifactId>
   <name>web</name>
@@ -48,7 +48,7 @@
 		<dependency>
 		    <groupId>com.dtstack.rdos</groupId>
 		    <artifactId>service</artifactId>
-			<version>1.0.0</version>
+			<version>${revision}</version>
 		</dependency>
   </dependencies>
 </project>
