--- a/base/plugin/dt-yarn-shell/dt-yarn-shell-core/pom.xml
+++ b/base/plugin/dt-yarn-shell/dt-yarn-shell-core/pom.xml
@@ -92,8 +92,13 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <copy file="${basedir}/target/${project.name}-${project.version}.jar"
-                                      tofile="${basedir}/target/${project.name}-${git.branch}.jar" />
+                                <copy todir="${basedir}/../lib/">
+                                    <fileset dir="target/">
+                                        <include name="${project.name}-${project.version}.jar" />
+                                    </fileset>
+                                </copy>
+                                <move file="${basedir}/../lib/${project.name}-${project.version}.jar"
+                                      tofile="${basedir}/../lib/core.jar" />
                             </tasks>
                         </configuration>
                     </execution>
