--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -87,7 +87,8 @@
     "node-sass": "4.11.0",
     "postcss-loader": "0.9.1",
     "progress-bar-webpack-plugin": "1.11.0",
-    "react-test-renderer": "^16.8.3",
+    "react-test-renderer": "16.8.4",
+    "redux-mock-store": "1.5.3",
     "sass-loader": "^7.0.1",
     "strip-ansi": "3.0.1",
     "style-loader": "^0.21.0",
