--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-stage-2": "^7.0.0",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-angular": "7.1.2",
+    "@types/jest": "^24.0.11",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.4",
