--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@handsontable/react": "^2.1.0",
     "@types/lodash": "^4.14.118",
+    "@types/react": "^16.8.10",
     "antd": "2.13.14",
     "codemirror": "5.25.0",
     "d3-selection": "1.1.0",
