--- a/conf/node.yml
+++ b/conf/node.yml
@@ -1,15 +1,15 @@
 #engine
 slots: 10
-localAddress: 172.16.2.236:8090
+localAddress: localhost:8090
 #nodeZkAddress: node1:24002,node2:24002,node3:24002/xc_engine
-nodeZkAddress: 172.16.10.82:2181,172.16.10.91:2181,172.16.10.97:2181/engine
+nodeZkAddress: 172.16.10.34:2181,172.16.10.45:2181,172.16.10.86:2181/engine
 exeQueueSize: 1
 #debug模式关闭数据校验
 isDebug: true
 isSecurity: false
 
 db:
-   url: jdbc:mysql://172.16.10.91:3306/ide?charset=utf8&autoReconnect=true
+   url: jdbc:mysql://172.16.10.45:3306/ide?charset=utf8&autoReconnect=true
    userName: dtstack
    pwd: abc123
 
