--- a/base/plugin/learning/learning-core/pom.xml
+++ b/base/plugin/learning/learning-core/pom.xml
@@ -80,11 +80,8 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <copy todir="${basedir}/../target">
-                                    <fileset dir="${basedir}/target">
-                                        <include name="${project.name}-${project.version}.jar" />
-                                    </fileset>
-                                </copy>
+                                <move file="${basedir}/target/${project.name}-${project.version}.jar"
+                                      tofile="${basedir}/target/${project.name}-${git.branch}.jar" />
                             </tasks>
                         </configuration>
                     </execution>
