flink130,140,spark,spark160-yarn remove module

--- a/base/plugin/spark/pom.xml
+++ b/base/plugin/spark/pom.xml
@@ -19,8 +19,8 @@
   </properties>
 
 	<modules>
-		<module>sql-proxy</module>
-		<module>spark-client</module>
+		<!--<module>sql-proxy</module>-->
+		<!--<module>spark-client</module>-->
 	</modules>
 
   <dependencies>
