--- a/base/plugin/rdbs/pom.xml
+++ b/base/plugin/rdbs/pom.xml
@@ -18,6 +18,7 @@
         <module>oracle</module>
         <module>sqlserver</module>
         <module>hive</module>
+        <module>postgresql</module>
     </modules>
 
 
