--- a/engine-ui/packages/console-ui/.gitlab-ci.yml
+++ b/engine-ui/packages/console-ui/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 before_script:
   - npm -v
   - npm install --unsafe-perm=true --allow-root
+  - npm install -g eslint
   - npm install -g lint-md
+
 lint:
   script:
     - npm run lint
